# EMovie

./: .gitignore  CMakeLists.txt  README.md  emovie.sql
.github/workflows/: build.yml
Client/: base_client.cpp  base_client.hpp  client.cpp  client.hpp  em_client.cpp  em_client.hpp  main.cpp  main_old.cpp
Movies/: readme.md
Movies/eclipse/: eclipse.m3u8  eclipse1.ts  eclipse4.ts  eclipse5.ts  eclipse_.m3u8  eclipse_0.ts  eclipse_2.ts  eclipse_3.ts  eclipse_6.ts  eclipse_7.ts
Movies/домовенок_кузя/: домовенок_кузя_.m3u8  домовенок_кузя_0.ts
Server/: database.cpp  database.hpp  main.cpp  server  server.cpp  server.hpp
